k8s/api/bookstore-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-api
  namespace: bookstore
  labels:
    app: bookstore-api
    component: api
spec:
  selector:
    app: bookstore-api
  type: ClusterIP
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
